# trade-copier-server

./: .env.example  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
migrations/: init.sql
src/: config.rs  main.rs
src/db/: mod.rs
src/errors/: mod.rs
src/handlers/: trade.rs
src/models/: trade.rs
