[package]
name = "trade_copier_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
r2d2 = "0.8"
r2d2_sqlite = "0.22"